2007-03-07  Brian Bidulock  <bidulock@openss7.org>

	* src/sctp.c: rename caches different from strsctp.
	* tests/atlocal.in: tool substitutions changed

2007-03-06  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/Makefile.am: attempt proper texinfo dependencies

2007-03-05  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: get rid of extraneous warnings
	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release
	* sctp.spec.in: updated changelog

2007-03-04  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release
	* debian/copyright: updates for release
	* doc/manual/news.texi: updates for release

	* sctp.spec.in: do not propagate empty flags
	* debian/rules.in: do not propagate empty flags

2007-02-28  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: #ifdef instead of #if
	* doc/manual/configure.texi: updates and corrections
	* doc/manual/descrip.texi: updates and corrections
	* doc/manual/news.texi: updates and corrections
	* doc/manual/releases.texi: updates and corrections
	* doc/manual/rpm.texi: updates and corrections
	* doc/manual/sctp.7.texi: updates and corrections
	* doc/manual/sctp.texi: updates and corrections
	* doc/manual/todo.texi: updates and corrections
	* doc/manual/tree.texi: updates and corrections

2007-02-12  Brian Bidulock  <bidulock@openss7.org>

	* sctp.spec.in: support for autoconf 2.61
	* configure.ac: support for autoconf 2.61
	* cvsignore: support for autoconf 2.61
	* debian/mscript_header.in: support for autoconf 2.61
	* debian/rules.in: support for autoconf 2.61
	* doc/manual/news.texi: support for autoconf 2.61
	* doc/manual/texi/install.texi: support for autoconf 2.61
	* m4/devfs.m4: support for autoconf 2.61
	* m4/openss7.m4: support for autoconf 2.61