@@ -1,5 +1,6 @@
 2007-03-07  Brian Bidulock  <bidulock@openss7.org>
 
+	* src/sctp.c: shorten cache names
 	* src/sctp.c: rename caches different from strsctp.
 	* tests/atlocal.in: tool substitutions changed
 
